--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+<body>
+<h1>안녕 하세요 여러분</h1>
+
+<form action="" method="get">
+    <input type="text" name="q" value="{{ q }}"/>
+    <input type="submit" value="검색">
+</form>
+    <ul>
+{% for post in post_list %}
+    <li>
+        {{ post.id }}
+        {{ post.title }}
+        {{ post.created_at }}
+        {{ post.updated_at }}
+    </li>
+    </ul>
+
+
+{% endfor %}
+</body>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
-<h1>안녕 하세요 여러분</h1>
-</body>
 </html>
