템플릿공부

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,17 +1,14 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8"/>
-    <title>
-        {{ post.title }}
-    </title>
-    <body>
+{% extends "blog/layout.html" %}
+
+{% block title %}
+{{ post.title }}
+{% endblock %}
+{% block content %}
     <h1>{{ post.title }}</h1>
     <p>{{ post.content|linebreaks }}</p> {% comment %}이건 장고 템플릿테그의 개행문자 넣어주는거임 <p>
     linebreakbr 은 br 태그로줌
     로감싸줌{% endcomment %}
     <hr/>
-
 <h3>댓글</h3>
     <ul>
 {% for comment in post.comment_set.all %}
@@ -21,9 +18,5 @@
 </li>
 {% endfor %}
 </ul>
-</body>
+{% endblock %}
 
-</head>
-
-
-</html>
