--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,7 +8,8 @@
 {% for post in post_list %}
     <li>
         {{ post.id }}
-        <a href="/blog/{{ post.id }}">
+        {% comment %}<a href="/blog/{{ post.id }}">{% endcomment %}
+        <a href="{% url 'blog:post_detail' post.id %}">
             {{ post.title }}
         </a>
         {{ post.created_at }}
