--- a/dojo/templates/dojo/post_form.html
+++ b/dojo/templates/dojo/post_form.html
@@ -1,22 +1,32 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<!-- 기본 폼 거의 이게 보통쓰는 방식-->
+{% load bootstrap3 %}
+
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+
+{% comment %}
+지린다 이건 귀찮을때 그냥 쓰면됨
+서비스에는 쓰기좀 그럼
+{% endcomment %}
+
 <div class = "container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6 col-md-offset-3">
+            <h1>Post Form</h1>
             <form action="" method="post">
     {% csrf_token %}
-    <table class = "table table-hover table-bordered">
-        {{ form.as_table}}
-    </table>
-    <input type="submit" class="btn btn-primary"/>
+    {% bootstrap_form form %}
+    <input type="submit" class="btn btn-primary">
 </form>
         </div>
     </div>
 </div>
 
 
+
+
 <script>
+
     var dom = document.getElementById('{{ form.user_agent.id_for_label }}');
     dom.value = navigator.userAgent;
-
 </script>
